Fixed background tiles bug for web browsers with wide scrollbars

--- a/style.css
+++ b/style.css
@@ -276,6 +276,7 @@ filter: drop-shadow(2px 5px 2px rgba(128, 128, 128, 0.384));
 
 .projectCard>.card{
     background-color: #eeebdfc0;
+    flex-grow: 1;
     padding: 15px;
     transition: 150ms;
     pointer-events: all;
